Detail view of itinerary routes and track details shared by another user
Also:

- Display note on live update map markers

- Ignore live map udpates whilst already processing one for the same
target user

- Improvements to Geo location parsing

- Submit locations using POST instead of GET

- Added information on using the offset parameter

--- a/app/partials/itinerary-route-edit.html
+++ b/app/partials/itinerary-route-edit.html
@@ -73,7 +73,7 @@
             Select only one item when splitting the route.
           </div>
         </div>
-        <div id="div-buttons">
+        <div id="div-buttons" ng-show="!shared">
           <button id="btn-delete"
                   class="btn btn-lg btn-danger"
                   mwl-confirm
