--- a/app/partials/itinerary-track-edit.html
+++ b/app/partials/itinerary-track-edit.html
@@ -36,7 +36,7 @@
               <td>
                 <input type="checkbox" ng-model="segment.selected" ng-click="showSegment(segment)" />
               </td>
-              <td><a href="#/itinerary-track-segment-edit?itineraryId={{itineraryId}}&trackId={{trackId}}&segmentId={{segment.id}}">{{segment.id}}</a></td>
+              <td><a href="#/itinerary-track-segment-edit?itineraryId={{itineraryId}}&trackId={{trackId}}&segmentId={{segment.id}}&shared={{shared}}">{{segment.id}}</a></td>
             </tr>
           </table>
           <div id="div-paging">
@@ -66,7 +66,7 @@
                ng-message="notContiguous">
             All the segments to be merged must be contiguous (no gaps).</div>
         </div>
-        <div id="div-buttons">
+        <div id="div-buttons" ng-show="!shared">
           <button id="btn-delete"
                   class="btn btn-lg btn-danger"
                   mwl-confirm
