--- a/app/partials/users.html
+++ b/app/partials/users.html
@@ -59,7 +59,7 @@
         <th></th>
       </tr>
       <tr ng-repeat="user in users.payload">
-        <td><a href="#/edit-user?id={{user.id}}">{{user.nickname}}</a></td>
+        <td><a href="#!/edit-user?id={{user.id}}">{{user.nickname}}</a></td>
         <td>{{user.email}}</td>
         <td>{{user.firstname}}</td>
         <td>{{user.lastname}}</td>
