--- a/app/partials/tracker-info.html
+++ b/app/partials/tracker-info.html
@@ -16,9 +16,9 @@
       recording plug-in</a> to log your journeys.
   </p>
 
-  <p>Copy <a id="gpslog-href-url" href="{{gpsLoggerUrlPrefix}}{{uuid.uuid}}">this link for GPSLogger</a>.</p>
+  <p>Copy <a id="gpslog-href-url" ng-href="{{gpsLoggerUrlPrefix}}{{uuid.uuid}}">this link for GPSLogger</a>.</p>
 
-  <p>Copy <a id="osmand-href-url" href="{{osmAndTrackingUrlPrefix}}{{uuid.uuid}}">this link for OsmAnd</a>.</p>
+  <p>Copy <a id="osmand-href-url" ng-href="{{osmAndTrackingUrlPrefix}}{{uuid.uuid}}">this link for OsmAnd</a>.</p>
   <div>
     <p>To construct a custom URL for a tracker client, use the parameter names
       listed below to pass appropriate values.  The parameter names must all
