--- a/app/partials/itinerary.html
+++ b/app/partials/itinerary.html
@@ -29,6 +29,7 @@
         <button id="btn-edit" ng-click="edit(form)" class="btn btn-lg btn-info">Edit</button>
         <button id="btn-sharing" ng-click="sharing()" class="btn btn-lg btn-success">Sharing</button>
         <button id="btn-upload" ng-click="upload()" class="btn btn-lg btn-success">GPX upload</button>
+        <button id="btn-refresh" ng-click="refreshData()" class="btn btn-lg btn-primary">Refresh</button>
       </div>
       <div id="div-view-raw-options" ng-show="data.shared_to_nickname !== null">
         <div id="div-view-raw-on" ng-show="!showRaw">
@@ -154,6 +155,14 @@
         </div>
       </div>
       <div style="margin-top: 20px;">
+        <div ng-messages="messages">
+          <div id="info-copy-message" ng-message="copied" class="alert alert-info" role="alert">
+            Attributes copied.  Use the paste button to copy the attributes to an itinerary you own.
+          </div>
+          <div id="error-copy-message" ng-message="copyNothingSelected" class="alert alert-warning" role="alert">
+            You must select at least one waypoint, track or route for copying.
+          </div>
+        </div>
         <button id="btn-download"
                 type="button"
                 class="btn btn-lg btn-success"
@@ -163,6 +172,15 @@
                 on-confirm="download(downloads)"
                 confirm-button-type="success"
                 >GPX download</button>
+        <button id="btn-download-kml"
+                type="button"
+                class="btn btn-lg btn-success"
+                mwl-confirm
+                title="KML Download"
+                message="Download waypoints, routes and tracks as KML?"
+                on-confirm="downloadKml(downloads)"
+                confirm-button-type="success"
+                >KML download</button>
         <button id="btn-edit-selected" ng-click="editSelected(downloads)"
                 class="btn btn-lg btn-info"
                 ng-show="data.shared_to_nickname === null">Edit attributes</button>
@@ -187,22 +205,25 @@
         <button id="btn-join-path" ng-click="joinPaths(downloads)"
                 class="btn btn-lg btn-success"
                 ng-show="data.shared_to_nickname === null">Join paths</button>
+        <button id="btn-copy" ng-click="copyItemsForPaste(downloads)"
+                class="btn btn-lg btn-primary">Copy</button>
       </div>
     </form>
   </div>
   <div id="extra-actions" style="margin-top: 10px;">
-    <button id="btn-download-kml"
-            type="button"
-            class="btn btn-lg btn-success"
-            mwl-confirm
-            title="KML Download"
-            message="Download waypoints, routes and tracks as KML?"
-            on-confirm="downloadKml(downloads)"
-            confirm-button-type="success"
-            >KML download</button>
     <button id="btn-map" ng-click="showMap(downloads)" type="button" class="btn btn-lg btn-primary">Show map</button>
     <button id="btn-new-waypoint" ng-click="createWaypoint(downloads)"
             class="btn btn-lg btn-warning"
             ng-show="data.shared_to_nickname === null">Add waypoint</button>
+    <button id="btn-paste"
+            type="button"
+            class="btn btn-lg btn-primary"
+            mwl-confirm
+            title="Paste"
+            message="Paste items"
+            on-confirm="pasteItems()"
+            confirm-button-type="success"
+            ng-show="canPaste && data.shared_to_nickname === null"
+            >Paste</button>
   </div>
 </div>
