--- a/app/partials/itinerary-track-edit.html
+++ b/app/partials/itinerary-track-edit.html
@@ -29,12 +29,12 @@
           </p>
           <table id="table-segments" class="wide-table table table-striped">
             <tr>
-              <th style="width: 60px;"><input type="checkbox" ng-model="data.selectAll" ng-click="selectAll(form)"/></th>
+              <th style="width: 60px;"><input type="checkbox" ng-model="data.selectAll" ng-change="selectAll(form)"/></th>
               <th>Segment ID</th>
             </tr>
             <tr ng-repeat="segment in data.track.segments">
               <td>
-                <input type="checkbox" ng-model="segment.selected" ng-click="showSegment(segment)" />
+                <input type="checkbox" ng-model="segment.selected" ng-change="showSegment(segment)" />
               </td>
               <td><a ng-href="/trip/app/itinerary-track-segment-edit?itineraryId={{itineraryId}}&trackId={{trackId}}&segmentId={{segment.id}}&shared={{shared}}">{{segment.id}}</a></td>
             </tr>
