Implemented searching for itineraries within specified distance of location

--- a/app/partials/itineraries.html
+++ b/app/partials/itineraries.html
@@ -47,6 +47,7 @@
       </div>
     </form>
     <div ng-show="itineraries.payload.length > 0">
+      <button id="btn-search" ng-click="showSearchPage()" class="btn btn-lg btn-primary">Search</button>
       <button id="btn-shares-report" ng-click="showSharesReport()" class="btn btn-lg btn-primary">Itinerary shares report</button>
     </div>
   </div>
