--- a/app/css/app.css
+++ b/app/css/app.css
@@ -160,5 +160,25 @@ input.days, input.minutes, input.hours {
 .view-label {
 	font-weight: bold;
 }
+.column-heading {
+	font-weight: bold;
+}
+.box {
+    /* background: #f2f2f2; */
+    display: flex;
+}
+.column {
+    /* border: 1px solid #e6e6e6; */
+    min-height: 30px;
+}
+.column-one {
+    flex: 0 0 130px;
+}
+.column-two {
+    flex: 1 1 300px;
+}
+.column-three {
+    flex: 1 4 200px;
+}
 /* Fix for href attributes inside accordion etc. http://angular-ui.github.io/bootstrap/versioned-docs/2.4.0/ */
 .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
